corrected z-index of left buttons

--- a/blinkstyle.css
+++ b/blinkstyle.css
@@ -269,7 +269,7 @@ height:0;
     margin-top:100px;
 }
 #left-box{
-    z-index:8888;
+    z-index:6666;
     display:flex;
     flex-direction:column;
     justify-content: center;
